package org.example;

public interface Event {
    void modifyStudent(Student student);
}
